fdo#75056: Overline attribute needs special treatment as well.

Also fix the export of underline types as well.  It was always saved
as a single line.

Change-Id: I88cb0f3702a6afc14544ecbce8f200b5422fd78f